# open-edx-plugins

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD  LICENSE  README.md  pants  pants.toml  pylintrc  pyproject.toml  pyrightconfig.json  renovate.json  run_devstack_integration_tests.sh  run_edx_integration_tests.sh  setup.cfg
ol_django_plugin/: README.md  pyproject.toml
ol_django_plugin/mitol/ol_ai_static_translations/: apps.py
src/edx_sysadmin/: .coverage  BUILD  CHANGELOG.rst  LICENSE.txt  README.rst  coverage.xml  git_import.py  models.py  pyproject.toml  setup.cfg  urls.py  views.py  views_test.py
src/edx_sysadmin/api/: BUILD  test_permissions.py  test_views.py  urls.py  views.py
src/edx_sysadmin/edx_sysadmin/: __init__.py  apps.py  forms.py  git_import.py  models.py  setup.cfg  urls.py  views.py  views_test.py
src/edx_sysadmin/migrations/: BUILD
src/edx_sysadmin/settings/: BUILD  common.py
src/edx_sysadmin/templatetags/: BUILD
src/edx_sysadmin/tests/: test_models.py  test_sysadmin.py
src/edx_sysadmin/utils/: BUILD  markup.py  utils.py
src/edx_username_changer/: BUILD  README.rst  coverage.xml  pyproject.toml  signals.py  tasks.py  utils.py
src/edx_username_changer/edx_username_changer/: README.rst  __init__.py  admin.py  apps.py  exceptions.py  signals.py  tasks.py  utils.py
src/edx_username_changer/settings/: BUILD  common.py  devstack.py
src/ol_openedx_ai_static_translations/: CHANGELOG.rst  README.rst  pyproject.toml
src/ol_openedx_ai_static_translations/ol_openedx_ai_static_translations/: __init__.py  apps.py  constants.py  utils.py
src/ol_openedx_auto_language_select/: README.rst  pyproject.toml
src/ol_openedx_auto_language_select/ol_openedx_auto_language_select/: __init__.py  apps.py  constants.py  filters.py  middleware.py  urls.py  utils.py  views.py
src/ol_openedx_auto_select_language/: CHANGELOG.rst  README.rst  pyproject.toml
src/ol_openedx_auto_select_language/ol_openedx_auto_select_language/: __init__.py  apps.py  constants.py  filters.py  middleware.py  urls.py  utils.py  views.py
src/ol_openedx_auto_select_language/tests/: conftest.py  fixtures.py  test_filters.py  test_middleware.py  test_utils.py  test_views.py
src/ol_openedx_canvas_integration/: .coveragerc  BUILD  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  __init__.py  api.py  app.py  client.py  cms_tasks.py  constants.py  context_api.py  coverage.xml  handlers.py  openedx.yaml  pyproject.toml  receivers.py  setup.py  task_helpers.py  tasks.py  test_cms_tasks.py  test_settings.py  urls.py  utils.py  views.py
src/ol_openedx_canvas_integration/ol_openedx_canvas_integration/: __init__.py  api.py  app.py  client.py  cms_tasks.py  constants.py  context_api.py  handlers.py  pipeline.py  task_helpers.py  tasks.py  test_settings.py  urls.py  utils.py  views.py
src/ol_openedx_canvas_integration/ol_openedx_canvas_integration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ol_openedx_canvas_integration/settings/: BUILD  common.py  production.py
src/ol_openedx_canvas_integration/templates/: BUILD  canvas_integration.html
src/ol_openedx_canvas_integration/tests/: conftest.py  test_api.py  test_client.py  test_cms_tasks.py  test_context_api.py  test_handlers.py  test_pipeline.py  test_receivers.py  test_settings.py  test_task_helpers.py  (+3 more)
src/ol_openedx_chat/: BUILD  README.rst  __init__.py  apps.py  block.py  compat.py  constants.py  coverage.xml  pyproject.toml  setup.cfg  urls.py  utils.py
src/ol_openedx_chat_xblock/: BUILD  CHANGELOG.rst  README.rst  apps.py  block.py  pyproject.toml
src/ol_openedx_checkout_external/: .coveragerc  BUILD  CHANGELOG.rst  MANIFEST.in  README.rst  __init__.py  app.py  pyproject.toml  urls.py  views.py
src/ol_openedx_course_export/: .coveragerc  BUILD  CHANGELOG.rst  MANIFEST.in  README.rst  __init__.py  app.py  pyproject.toml  s3_client.py  signals.py  tasks.py  urls.py  utils.py  views.py
src/ol_openedx_course_outline_api/: CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml
src/ol_openedx_course_staff_webhook/: CHANGELOG.rst  README.rst  pyproject.toml
src/ol_openedx_course_structure_api/: .coveragerc  BUILD  CHANGELOG.rst  MANIFEST.in  README.rst  __init__.py  pyproject.toml  urls.py  views.py
src/ol_openedx_course_sync/: BUILD  README.rst  __init__.py  admin.py  apps.py  constants.py  models.py  pyproject.toml  signals.py  tasks.py  utils.py
src/ol_openedx_course_translations/: CHANGELOG.rst  README.rst  pyproject.toml
src/ol_openedx_event_bridge/: .coveragerc  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml
src/ol_openedx_events_handler/: CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg
src/ol_openedx_feedback/: README.rst  pyproject.toml  setup.cfg
src/ol_openedx_git_auto_export/: BUILD  CHANGELOG.rst  CONFIGURATION.md  README.md  README.rst  admin.py  app.py  constants.py  models.py  pyproject.toml  signals.py  tasks.py  test_settings.py  utils.py
src/ol_openedx_logging/: BUILD  README.rst  pyproject.toml
src/ol_openedx_lti_utilities/: .coveragerc  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml
src/ol_openedx_otel_monitoring/: BUILD  CHANGELOG.rst  MANIFEST.in  README.rst  __init__.py  apps.py  client.py  metrics.py  middleware.py  pyproject.toml  tracing.py  urls.py
src/ol_openedx_rapid_response_reports/: .coveragerc  BUILD  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  __init__.py  api.py  app.py  constants.py  context_api.py  pylintrc  pyproject.toml  urls.py  utils.py
src/ol_openedx_sentry/: BUILD  LICENSE.txt  README.rst  app.py  pyproject.toml
src/ol_openedx_short_video_course/: README.rst  pyproject.toml  setup.cfg
src/ol_openedx_uai_content_customization/: CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg
src/ol_social_auth/: BUILD  README.md  README.rst  backends.py  coverage.xml  pyproject.toml  seed_tokens.py  setup.cfg
src/openedx_companion_auth/: .coveragerc  .gitignore  BUILD  README.md  README.rst  apps.py  manage.py  middleware.py  middleware_test.py  pyproject.toml  urls.py
(+607 files in other folders)
