[tool.poetry]
name = "edx-extensions"
version = "0.1.0"
description = "Collection of plugins for extending and enhancing the functionality of the Open edX platform"
authors = ["MIT Open Learning Engineering"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8"
Django = ">2.0"
celery = ">=4.4.7"
djangorestframework = "^3.14.0"
edx-django-utils = ">4.0.0"
edx-drf-extensions = "^10.0.0"
edx-opaque-keys = "^2.5.1"
gitpython = "^3.1.37"
python-json-logger = "^2.0.2"
sentry-sdk = "^1.3.1"
XBlock = "*"
opentelemetry-distro = "*"
opentelemetry-instrumentation-django = "*"
opentelemetry-exporter-richconsole = "*"
opentelemetry-exporter-otlp-proto-http = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "^3.0.0"
pytest = "^8.0.0"
twine = "^5.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "E902",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "UP007"
]
typing-modules = ["colour.hints"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]
"test_*.py" = ["S101"]
"src/ol_openedx_rapid_response_reports/docs/conf.py" = ["ERA"]
