[project]
name = "open-edx-plugins"
version = "0.1.0"
description = "Collection of plugins for extending and enhancing the functionality of the Open edX platform"
authors = [
    {name = "MIT Open Learning Engineering"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=4.0",
    "celery>=4.4.7",
    "djangorestframework>=3.14.0",
    "edx-django-utils",
    "edx-drf-extensions>=10.0.0",
    "edx-opaque-keys",
    "gitpython>=3.1.37",
    "python-json-logger>=3.0.0",
    "sentry-sdk>=2.0.0",
    "XBlock",
    "social-auth-core>=4.5.4",
    "opentelemetry-distro",
    "opentelemetry-instrumentation-django",
    "opentelemetry-exporter-richconsole",
    "opentelemetry-exporter-otlp-proto-http",
    "openedx-events",
]


[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "src/*"
]
exclude = [
    "src/__pycache__",
    "src/*.egg-info"
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-django>=4.11.1",
    "responses>=0.25.7",
    "ddt>=1.7.2",
    "twine>=5.0.0",
    "ruff>=0.12.0",
    "codecov",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
lint.ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "E902",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "UP007"
]
lint.typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]
"test_*.py" = ["S101", "D"]
"src/ol_openedx_rapid_response_reports/docs/conf.py" = ["ERA"]
