[project]
name = "edx-sysadmin"
version = "0.3.1"
description = "An Open edX plugin to enable SysAdmin panel"
authors = [
    {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["Python", "edx"]
dependencies = [
    "Django>2.0",
    "djangorestframework>=3.14.0",
    "edx-django-utils>4.0.0",
    "edx-drf-extensions>=10.0.0",
    "edx-opaque-keys>=3.0.0",
]

[project.entry-points."lms.djangoapp"]
edx_sysadmin = "edx_sysadmin.apps:EdxSysAdminConfig"

[project.entry-points."cms.djangoapp"]
edx_sysadmin = "edx_sysadmin.apps:EdxSysAdminConfig"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["edx_sysadmin*"]
exclude = ["edx_sysadmin.tests*"]

[tool.setuptools.package-data]
"edx_sysadmin" = ["static/**/*", "templates/**/*", "conf/**/*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
