[project]
name = "ol-openedx-ai-static-translations"
version = "0.1.0"
description = "An Open edX plugin for AI-powered static translation management"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["Python", "edx"]
dependencies = [
  "Django>=4.0",
  "GitPython>=3.1.40",
  "litellm>=1.80.0",
  "polib>=1.2.0",
  "requests>=2.31.0",
]

[project.entry-points."cms.djangoapp"]
ol_openedx_ai_static_translations = "ol_openedx_ai_static_translations.apps:OLOpenedXAIStaticTranslationsConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_ai_static_translations"]
include = [
  "ol_openedx_ai_static_translations/**/*.py",
  "ol_openedx_ai_static_translations/**/*.txt",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_ai_static_translations/**/*",
  "README.rst",
  "pyproject.toml",
]
