[project]
name = "ol-openedx-auto-select-language"
version = "0.1.0"
description = "An Open edX plugin to auto-select the language based on course language settings."
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["Python", "edx"]
dependencies = [
  "Django>=4.0",
  "djangorestframework>=3.14.0",
  "edx-opaque-keys",
]

[project.entry-points."cms.djangoapp"]
ol_openedx_auto_select_language = "ol_openedx_auto_select_language.apps:OLOpenEdxAutoSelectLanguageConfig"

[project.entry-points."lms.djangoapp"]
ol_openedx_auto_select_language = "ol_openedx_auto_select_language.apps:OLOpenEdxAutoSelectLanguageConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_auto_select_language"]
include = [
  "ol_openedx_auto_select_language/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_auto_select_language/**/*",
  "README.rst",
  "pyproject.toml",
]
