[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-canvas-integration"
version = "0.4.0"
description = "An Open edX plugin to add canvas integration support"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["Python", "edx", "canvas"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_canvas_integration = "ol_openedx_canvas_integration.app:CanvasIntegrationConfig"

# cms.djangoapp entry point was empty in BUILD

[tool.hatch.build]
include = [
    "ol_openedx_canvas_integration/**.py",
    "ol_openedx_canvas_integration/static/**",
    "ol_openedx_canvas_integration/templates/**",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
