[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-chat"
version = "0.3.4"
description = "An Open edX plugin to add Open Learning AI chat aside to xBlocks"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
  { name = "MIT Office of Digital Learning" },
]
keywords = ["Python", "edx", "xblock", "chat", "ai"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[project.entry-points."xblock_asides.v1"]
ol_openedx_chat = "ol_openedx_chat.block:OLChatAside"

[project.entry-points."lms.djangoapp"]
ol_openedx_chat = "ol_openedx_chat.apps:OLOpenedxChatConfig"

[project.entry-points."cms.djangoapp"]
ol_openedx_chat = "ol_openedx_chat.apps:OLOpenedxChatConfig"

[tool.hatch.build]
include = [
    "ol_openedx_chat/**.py",
    "ol_openedx_chat/static/**", # Includes js, css, html, images subdirs
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
