[project]
name = "ol-openedx-chat"
version = "0.5.2"
description = "An Open edX plugin to add Open Learning AI chat aside to xBlocks"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["Python", "edx"]
dependencies = [
  "Django>=4.0",
  "djangorestframework>=3.14.0",
  "edx-django-utils>4.0.0",
  "XBlock",
]

[project.entry-points."xblock_asides.v1"]
ol_openedx_chat = "ol_openedx_chat.block:OLChatAside"

[project.entry-points."lms.djangoapp"]
ol_openedx_chat = "ol_openedx_chat.apps:OLOpenedxChatConfig"

[project.entry-points."cms.djangoapp"]
ol_openedx_chat = "ol_openedx_chat.apps:OLOpenedxChatConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_chat"]
include = [
  "ol_openedx_chat/**/*.py",
  "ol_openedx_chat/static/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_chat/**/*",
  "README.rst",
  "pyproject.toml",
]
