[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-checkout-external"
version = "0.1.3"
description = "An Open edX plugin to add API for external checkouts"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["Python", "edx", "checkout", "api"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_checkout_external = "ol_openedx_checkout_external.app:ExternalCheckoutConfig"

# cms.djangoapp entry point was empty in BUILD

[tool.hatch.build]
include = [
    "ol_openedx_checkout_external/**.py",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
