[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-course-export"
version = "0.1.2"
description = "An Open edX plugin to add API for course export to s3"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["Python", "edx", "course", "export", "s3", "api"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

# lms.djangoapp entry point was empty in BUILD

[project.entry-points."cms.djangoapp"]
ol_openedx_course_export = "ol_openedx_course_export.app:CourseExportConfig"

[tool.hatch.build]
include = [
    "ol_openedx_course_export/**.py",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
