[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-course-staff-webhook"
version = "0.1.0"
description = "Open edX plugin that fires a webhook when course staff roles are added"
readme = "README.rst"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
dependencies = [
    "Django>=4.0",
    "celery>=4.4.7",
    "edx-django-utils>4.0.0",
    "openedx-events",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_course_staff_webhook = "ol_openedx_course_staff_webhook.apps:CourseStaffWebhookConfig"

[project.entry-points."cms.djangoapp"]
ol_openedx_course_staff_webhook = "ol_openedx_course_staff_webhook.apps:CourseStaffWebhookConfig"
