[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-course-structure-api"
version = "0.1.3"
description = "An Open edX plugin to add API for course structure"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["Python", "edx", "course", "structure", "api"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_course_structure_api = "ol_openedx_course_structure_api.app:CourseStructureAPIConfig"

# cms.djangoapp entry point was empty in BUILD

[tool.hatch.build]
include = [
    "ol_openedx_course_structure_api/**.py",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
