[project]
name = "ol-openedx-course-sync"
version = "0.5.2"
description = "An Open edX plugin to sync course changes to its reruns."
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.0",
  "djangorestframework>=3.14.0",
  "edx-django-utils>4.0.0",
  "edx-opaque-keys",
  "openedx-events",
]

[project.entry-points."cms.djangoapp"]
ol_openedx_course_sync = "ol_openedx_course_sync.apps:OLOpenEdxCourseSyncConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_course_sync"]
include = [
  "ol_openedx_course_sync/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_course_sync/**/*",
  "README.rst",
  "pyproject.toml",
]
