[project]
name = "ol-openedx-event-bridge"
version = "0.1.0"
description = "An Open edX plugin to add event bridge between open edX and MIT Application"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.0",
  "djangorestframework>=3.14.0",
  "edx-django-utils>4.0.0",
  "edx-drf-extensions>=10.0.0",
  "edx-opaque-keys",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_event_bridge = "ol_openedx_event_bridge.app:OLEventBridgeConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_event_bridge"]
include = [
  "ol_openedx_event_bridge/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_event_bridge/**/*",
  "README.rst",
  "pyproject.toml",
]
