[project]
name = "ol-openedx-feedback"
version = "0.1.0"
description = "An Open edX plugin to collect per-block learner feedback"
authors = [{name = "MIT Office of Digital Learning"}]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["Python", "edx"]
dependencies = [
  "Django>=4.0",
  "XBlock",
]

[project.entry-points."xblock_asides.v1"]
ol_openedx_feedback = "ol_openedx_feedback.block:FeedbackAside"

[project.entry-points."lms.djangoapp"]
ol_openedx_feedback = "ol_openedx_feedback.apps:OLOpenedxFeedbackConfig"

[project.entry-points."cms.djangoapp"]
ol_openedx_feedback = "ol_openedx_feedback.apps:OLOpenedxFeedbackConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_feedback"]
include = [
  "ol_openedx_feedback/**/*.py",
  "ol_openedx_feedback/static/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_feedback/**/*",
  "README.rst",
  "pyproject.toml",
]
