[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-git-auto-export"
version = "0.3.1"
description = "A plugin that auto saves the course OLX to git when an author publishes it"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["Python", "edx", "git", "export", "olx"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

# Dependencies inferred from Pants BUILD (adjust if needed)
dependencies = [
   "edx-opaque-keys",
   "celery",
]

[project.entry-points."cms.djangoapp"]
ol_openedx_git_auto_export = "ol_openedx_git_auto_export.app:GitAutoExportConfig"

# lms.djangoapp entry point was empty in BUILD

[tool.hatch.build]
include = [
    "ol_openedx_git_auto_export/**.py",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
