[project]
name = "ol-openedx-git-auto-export"
version = "0.7.1"
description = "A plugin that auto saves the course OLX to git when an author publishes it"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.0",
  "celery>=4.4.7",
  "edx-django-utils>4.0.0",
  "edx-opaque-keys",
  "gitpython>=3.1.37",
  "openedx-events",
]

[project.entry-points."cms.djangoapp"]
ol_openedx_git_auto_export = "ol_openedx_git_auto_export.app:GitAutoExportConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "ol_openedx_git_auto_export/**/*.py",
]
exclude = [
  "ol_openedx_git_auto_export/**/test_*"
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_git_auto_export/**/*",
  "README.rst",
  "pyproject.toml",
]
exclude = [
  "ol_openedx_git_auto_export/**/test_*"
]
