[project]
name = "ol-openedx-logging"
version = "0.3.2"
description = "An Open edX plugin to customize the logging configuration used by the edx-platform application"
readme = "README.rst"
authors = [{ name = "MIT Office of Digital Learning" }]
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = ["Django>=4.0", "structlog>=24.0.0"]

[project.entry-points."lms.djangoapp"]
ol_openedx_logging = "ol_openedx_logging.app:EdxLoggingLMS"

[project.entry-points."cms.djangoapp"]
ol_openedx_logging = "ol_openedx_logging.app:EdxLoggingCMS"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ol_openedx_logging.settings.test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_logging"]
include = ["ol_openedx_logging/**/*.py"]

[tool.hatch.build.targets.sdist]
include = ["ol_openedx_logging/**/*", "README.rst", "pyproject.toml"]
